<resources>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_save">Speichern</string>
    <string name="action_delete">Löschen</string>
    <string name="action_editSymptom">Bearbeiten</string>

    <string name="app_name">Medical Journal</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_export">Export</string>
    <string name="action_notifications">Erinnerungen</string>
    <string name="action_rate_day">Tag bewerten</string>
    <string name="action_new_factor">Faktor anlegen</string>
    <string name="button_new_factor">+ Symptom hinzufügen</string>

    <string-array name="tabs">
        <item>Woche</item>
        <item>Monat</item>
        <item>Jahr</item>
    </string-array>

    <string-array name = "days">
        <item>MO.</item>
        <item>DI.</item>
        <item>MI.</item>
        <item>DO.</item>
        <item>FR.</item>
        <item>SA.</item>
        <item>SO.</item>
    </string-array>

    <!-- Export activity -->
    <string name="label_activity_export">Exportieren</string>
    <string name="loading">Exportiert Symptome ...</string>
    <string name="emailClient">Wähle einen Email Client!</string>
    <string name="pdfFailed">Konnte kein PDF erstellen.</string>
    <string name="pdfExists">PDF existiert bereits.</string>
    <string name="created"> wurde erstellt.</string>
    <string name="date">Datum</string>
    <string name="note">Notiz</string>
    <string name="weatherPDF">Wetter</string>
    <string-array name="rating">
        <item>Nicht definiert</item>
        <item>Sehr gut</item>
        <item>Gut</item>
        <item>In Ordnung</item>
        <item>Schlecht</item>
        <item>Sehr schlecht</item>
    </string-array>
    <string name="inputFileName">Dateiname eingeben</string>
    <string name="export">Exportieren</string>
    <string name="exportAll">Alle exportieren</string>
    <string name="mail">Per Mail versenden</string>
    <string name="skala">Gesundheitsskala: Sehr schlecht - Schlecht - In Ordnung - Gut - Sehr gut</string>
    <string name="noSymptom">Kein Symptom ausgewählt</string>

    <!-- Erinnerungen activity -->
    <string name="title_activity_notifications">Erinnerungen</string>
    <string name="inputName">Bezeichnung eingeben</string>
    <string name="mo">MO</string>
    <string name="di">DI</string>
    <string name="mi">MI</string>
    <string name="don">DO</string>
    <string name="fr">FR</string>
    <string name="sa">SA</string>
    <string name="so">SO</string>
    <string name="zeit">00:00</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="noUserInput">Keine User Eingabe</string>
    <string name="cantdelete">Kann nicht gelöscht werden</string>
    <string name="cantedit">Kann nicht bearbeitet werden</string>

    <!-- Rate day activity -->
    <string name="rateDay">Tag bewerten</string>
    <string name="editNote">Notiz eingeben</string>

    <!-- New Factor activity -->
    <string name="title_activity_new_factor">NewFactorActivity</string>
    <string name="too_many_symptoms">Du hast die maximale Anzahl an Symptomen erreicht, es muss erst ein altes entfernt werden!</string>
    <string name="removeFactor">Faktor entfernen</string>
    <string name="addFactor">Faktor eingeben</string>

    <!--open Weather API -->
    <string name="open_weather_maps_api_key">04f4e274ef4930db6350758fd3c9556a</string>
    <string name="last_weather_update_key">last Weather Update</string>
    <string name="weatherFail">Weather fetching failed</string>

    <!--Day detail fragment-->
    <!--<string name="rating">Bewertung: </string>-->
    <string name="weather">Wetter: </string>
    <string name="noDataAvailable">Keine Daten verfügbar.</string>

    <!--New Factor Fragment -->
    <string name="noInput">No Input</string>

    <string name="deleteAlert">Bist du dir sicher, dass du %1$s löschen möchtest?</string>
    <string name="deleteSymptom">Symptom löschen</string>
    <string name="binary">binär</string>
    <string name="gradual">graduell</string>

</resources>
