<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderSwitch"
        android:textSize="20sp"
        android:checked="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeit"
                android:id="@+id/zeit"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mo"
                android:id="@+id/mo"
                android:textSize="22sp"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/di"
                android:id="@+id/di"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi"
                android:id="@+id/mi"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don"
                android:id="@+id/don"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fr"
                android:id="@+id/fr"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sa"
                android:id="@+id/sa"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so"
                android:id="@+id/so"
                android:textSize="22sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
        </TableRow>
</LinearLayout>