<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.team3.pem.pem.activities.ExportActivity">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:id="@+id/mailswitch"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:switchMinWidth="50sp"
        android:switchPadding="50sp"
        android:layout_above="@+id/exportbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/symptomListView"
        android:layout_above="@+id/mailswitch"
        android:layout_below="@+id/exportSwitch"
        android:layout_marginLeft="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportAll"
        android:id="@+id/exportSwitch"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/nameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/nameField"
        android:layout_alignEnd="@+id/nameField"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameField"
        android:hint="@string/inputFileName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        android:id="@+id/exportbutton"
        android:textColor="@color/accent_material_light"
        android:background="#00ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingText"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/exportbutton"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
