<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customdialog"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:minWidth="300dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editNote">
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateDay"
        android:id="@+id/tvRateDay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
        android:id="@+id/buttonSaveDay"
        android:textColor="@color/accent_material_light"
        android:background="#00ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editNote"
        android:layout_alignEnd="@+id/editNote" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editNote"
        android:hint="@string/editNote"
        android:layout_above="@+id/buttonSaveDay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:id="@+id/cancel_action"
        android:textColor="@color/accent_material_light"
        android:background="#00ffffff"
        android:layout_alignTop="@+id/buttonSaveDay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/tvRateDay"
        android:layout_above="@+id/editNote"/>

</RelativeLayout>