<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableColorContainer"
        android:layout_alignParentTop="true">

    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/too_many_symptoms"
        android:id="@+id/tooManySymptomsText"
        android:gravity="center"
        android:textIsSelectable="false"
        android:layout_gravity="center"
        android:layout_below="@+id/tableColorContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputText"
        android:hint="@string/addFactor"
        android:gravity="center"
        android:singleLine="true"
        android:layout_below="@+id/tableColorContainer"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Speichern"
        android:id="@+id/button_save_factor"
        android:textColor="@color/accent_material_light"
        android:background="#00ffffff"
        android:layout_below="@+id/inputText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:id="@+id/button_cancel"
        android:textColor="@color/accent_material_light"
        android:background="#00ffffff"
        android:layout_alignTop="@+id/button_save_factor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
